--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
       client:
         registration:
           google:
-            client-id: 792958036058-cdrt70vcsbd3qgp5lalr2jhip7ha420s.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 
+            client-secret: 
             scope:
               - email
               - profile
